--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Kufeisoft\\Auth\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Kufeisoft\\Auth\\Tests\\": "tests/"
+      "kufeisoft\\": "src/"
     }
   }
 }
